--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,45 @@
+body{
+    background-color: antiquewhite;
+}
+nav, h1,h2,h3 {
+    font-family: 'Bebas Neue', sans-serif;
+}
+
+
+
+nav {
+    margin-left: 0px;
+
+    padding-left: 0px;
+    list-style: none;
+    background-color: #BFA830;
+}
+
+
+nav li {
+    display: inline;    
+}
+
+nav a {
+    display: inline-block;
+    box-shadow: 5px 5px black ;
+    width: 5rem;
+    margin: 10px;
+    padding: 10px;
+    border: 2px inset black;
+    background-color: #028E9B;
+    border-radius: 10%;
+    color: black;
+    text-align: center;
+
+}
+nav a:hover {
+    background-color: gold; 
+    box-shadow: 5px 5px black;
+}
+
 table,
 td {
     border: 2px solid black;
 }
 
-* {
-    background-color: antiquewhite;
-}
